# helix

./: .dir-locals.el  .drone.yml  .gitignore  .gitmodules  .travis.yml  AExp.v  CarrierType.v  CaseNaming.v  ConstructiveSigmaHCOL.v  CpdtTactics.v  DFT.v  Dockerfile  DynWin.v  FinNatSet.v  HCOL.v  HCOLBreakdown.v  HCOLImpl.v  HCOLSyntax.v  IndexFunctions.v  Jenkinsfile  MRtheta.v  Makefile  MaybeError.v  README.md  README.org  Rtheta.v  RthetaWriterMonad.v  SPMatrix.v  SVector.v  SigmaHCOL.v  SigmaHCOLRewriting.v  Spiral.v  SpiralTactics.v  StateGame.v  THCOL.v  THCOLImpl.v  TODO.md  TODO.org  TSigmaHCOL.v  VecSetoid.v  (+12 more)
artefacts/: dwmonitor-proof.g  dwmonitor.g  dwmonitor.i  dwmonitor.icode  dwmonitor_interval.i  dynwin_DSHCOL.txt  dynwin_FSHCOL.txt  dynwin_FSHCOL_short.txt  dynwin_MSHCOL.txt  dynwin_RHCOL.txt  dynwin_SHCOL1.txt  dynwin_ast.txt  dynwin_dshcol.txt  dynwin_mshcol.txt  test_dynwin64.ll  transform.i  transform1.i
coq/: .agignore  .gitignore
doc/: Correctness.org  Notes.org  TODO.org  TopLevel.org  admit_DynWinProofs.diff  admit_DynWinProofs.v.diff  irtypes.org  itress.org  toggle-dynwin-proofs.sh
experiments/: 2009-tphols.v  FinNatSet.v  Float64vsRational.hs  Makefile  MemorySet.v  Paramorphism.v  bug1.v  bug1_unused.sh  bug5356.v  carriera_modules.v  comonad.v  compose_rewrite.v  correct_by_constr.v  dual_monad.hs  dynwin.ipynb  dynwin.ll  dynwin_testeval.ml  dynwinmain.c  logging_ex.hs  map.ll  mapmain.c  monoid.v  morhp.hs  paper-snippets.v  prepost.txt  printfloat.c  restriction_under_binder.v  rewrite.v  rtheta_monad.hs  subtyping.v  test.hs  (+4 more)
(+248 files in other folders)
